--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style.css">
-   
+
     <title>Ai Poem Generator</title>
 </head>
 <body>
     <h1>Welcome to Ai Poem Generator</h1>
-
+<footer>
+    This AI project was coded with ❤️ by Yandia Alexis and is <a href="https://github.com/yand160/AI-poem-generator" target="_blank"> open-sourced on Github</a>
+    and <a href="https://rainbow-gumdrop-a81126.netlify.app/">is hosted on Netlify.</a>
+</footer>
 <script src="src/index.js"></script>
 </body>
 </html>
