--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Welcome to Ai Poem Generator</h1>
 <footer>
     This AI project was coded with ❤️ by Yandia Alexis and is <a href="https://github.com/yand160/AI-poem-generator" target="_blank"> open-sourced on Github</a>
-    and <a href="https://rainbow-gumdrop-a81126.netlify.app/">is hosted on Netlify.</a>
+    and <a href="https://rainbow-gumdrop-a81126.netlify.app/" target="_blank">is hosted on Netlify.</a>
 </footer>
 <script src="src/index.js"></script>
 </body>
