--- a/index.html
+++ b/index.html
@@ -2,16 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+   <link rel="stylesheet" href="src/style.css"/>
 
-    <title>Ai Poem Generator</title>
+    <title>AI Poem Generator</title>
 </head>
 <body>
-    <h1>Welcome to Ai Poem Generator</h1>
+    <header>
+        <h1>AI Poem Generator</h1>
+    </header>
+    <main>
+       <form>
+        <input type="text" placeholder="Enter your poem topic" autofocus required autocomplete="off"/>
+<input type="submit"/>
+    </form>
+    <div>
+        The poem generate
+        <br>
+        The poem generate
+    </div> 
+    </main>
 <footer>
     This AI project was coded with ❤️ by Yandia Alexis and is <a href="https://github.com/yand160/AI-poem-generator" target="_blank"> open-sourced on Github</a>
-    and <a href="https://rainbow-gumdrop-a81126.netlify.app/" target="_blank">is hosted on Netlify.</a>
+    and <a href="https://rainbow-gumdrop-a81126.netlify.app/" target="_blank"> is hosted on Netlify.</a>
 </footer>
 <script src="src/index.js"></script>
 </body>
