added basic js structure, typewriter plugin and api

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
    <link rel="stylesheet" href="src/style.css"/>
+<script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 
     <title>AI Poem Generator</title>
 </head>
@@ -12,15 +13,11 @@
         <h1>AI Poem Generator</h1>
     </header>
     <main>
-       <form>
+       <form id="poem-form-generator">
         <input type="text" placeholder="Enter your poem topic" autofocus required autocomplete="off"/>
-<input type="submit"/>
+<input type="submit" class="submit-button"/>
     </form>
-    <div>
-        The poem generate
-        <br>
-        The poem generate
-    </div> 
+    <div class="poem" id="poem"></div> 
     </main>
 <footer>
     This AI project was coded with ❤️ by Yandia Alexis and is <a href="https://github.com/yand160/AI-poem-generator" target="_blank"> open-sourced on Github</a>
