--- a/index.html
+++ b/index.html
@@ -3,30 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-   <link rel="stylesheet" href="src/style.css"/>
 <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-
+<link rel="stylesheet" href="src/style.css" />
     <title>AI Poem Generator</title>
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
     <header>
         <h1>AI Poem Generator</h1>
     </header>
     <main>
         <div class="form-container">
-       <form id="poem-form-generator">
+       <form id="poem-generator-form">
         <input type="text" placeholder="Enter the topic of any poem" autofocus required autocomplete="off" class="instructions" id="user-instructions"/>
 <input type="submit" class="submit-button"/>
     </form>
-    <div class="hint">i.e love, places, food</div> 
+    <div class="hint">love, places, food</div> 
     </div>
     <div class="poem hidden" id="poem"></div>
+    </main>
 <footer>
     This AI project was coded with ❤️ by Yandia Alexis and is <a href="https://github.com/yand160/AI-poem-generator" target="_blank"> open-sourced on Github</a>
     and <a href="https://rainbow-gumdrop-a81126.netlify.app/" target="_blank"> is hosted on Netlify.</a>
 </footer>
+</div>
 <script src="src/index.js"></script>
 </body>
 </html>
